${var}实现变量保存到mongoDB的根字段，而非字段的下级属性

--- a/test/NLog.Mongo.ConsoleTest/NLog.config
+++ b/test/NLog.Mongo.ConsoleTest/NLog.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true"
+      internalLogLevel="Warn"
+      internalLogFile="${basedir}/nloginner.txt">
 
   <variable name="logDirectory" value="${basedir}/Logs" />
 
@@ -9,9 +12,9 @@
   </extensions>
 
   <targets>
-    <target name="mongoDefault" xsi:type="AsyncWrapper">
+    <!--<target name="mongoDefault" xsi:type="AsyncWrapper">
       <target xsi:type="Mongo"
-              connectionString="mongodb://localhost/Logging"
+              connectionString="mongodb://localhost/Logging2"
               collectionName="DefaultLog"
               cappedCollectionSize="26214400">
         <property name="ThreadID" layout="${threadid}" bsonType="Int32" />
@@ -34,12 +37,12 @@
         <property name="ProcessName" layout="${processname:fullName=true}" />
         <property name="UserName" layout="${windows-identity}" />
       </target>
-    </target>
+    </target>-->
 
     <target xsi:type="Mongo"
             name="mongoCustom"
             includeDefaults="false"
-            connectionString="mongodb://localhost/Logging"
+            connectionString="mongodb://localhost/Logging2"
             collectionName="CustomLog"
             cappedCollectionSize="26214400">
 
@@ -53,6 +56,12 @@
       <field name="ProcessID" layout="${processid}" bsonType="Int32" />
       <field name="ProcessName" layout="${processname:fullName=true}" />
       <field name="UserName" layout="${windows-identity}" />
+      
+       <field name="Id" layout="${var:Id}" bsonType="int" />
+      <field name="OperateType" layout="${var:operateType}" bsonType="int" />
+      <field name="Ip" layout="${var:ip}" bsonType="string" />
+      <field name="Original" layout="${var:original}" bsonType="string" />
+      <field name="Current" layout="${var:current}" bsonType="string" />
 
     </target>
 
@@ -68,17 +77,19 @@
             createDirs="true"
             autoFlush="true" />
 
-    <target xsi:type="ColoredConsole"
+    <!--<target xsi:type="ColoredConsole"
             name="console"
-            layout="${time} ${level:uppercase=true:padding=1:fixedLength=true} ${logger:shortName=true} ${message} ${exception:format=tostring}"/>
+            layout="${time} ${level:uppercase=true:padding=1:fixedLength=true} ${logger:shortName=true} ${message} ${exception:format=tostring}"/>-->
 
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="mongoDefault" />
-    <logger name="*" minlevel="Trace" writeTo="mongoDefaultCustomDatabase" />
     <logger name="*" minlevel="Trace" writeTo="mongoCustom" />
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    
+    <!--<logger name="*" minlevel="Trace" writeTo="mongoDefault" />
+    <logger name="*" minlevel="Trace" writeTo="mongoDefaultCustomDatabase" />
+
+    <logger name="*" minlevel="Debug" writeTo="console" />-->
     <logger name="*" minlevel="Trace" writeTo="rollingFile" />
   </rules>
 </nlog>
